--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "axios": "^1.6.7",
     "jsonwebtoken": "^9.0.2"
   },
+  "optionalDependencies": {
+    "chatglmjs": "^0.0.11"
+  },
   "devDependencies": {
     "@types/node": "^20.11.25",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "rimraf": "^5.0.5",
     "typescript": "^5.4.2"
+  },
+  "resolutions": {
+    "strip-ansi": "6.x"
   }
 }
